Fixing video links and updating common links

--- a/infrastructure/team/reliability/observability.html.md.erb
+++ b/infrastructure/team/reliability/observability.html.md.erb
@@ -87,24 +87,29 @@ focus as of early 2023 is for GitLab.com, but in the long run, we would like to 
 
 * [Current Working board](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/5041767?label_name[]=Squad%3A%3AObservability)
 * [Current Triage board](https://gitlab.com/gitlab-com/gl-infra/reliability/-/boards/1676912?label_name[]=Squad%3A%3AObservability)
+* [Current Epic Board](https://gitlab.com/groups/gitlab-com/gl-infra/-/epic_boards/38727?label_name[]=team%3A%3AObservability)
+
+### Useful links / videos for learning;
+
+Readiness Reviews:
+* [Thanos Readiness review](https://gitlab.com/gitlab-com/gl-infra/readiness/-/blob/master/thanos/overview.md)
+
 
 Runbooks:
+* [Thanos runbooks in monitoring](https://gitlab.com/gitlab-com/runbooks/-/tree/master/docs/monitoring)
 * [Log Shipping](https://gitlab.com/gitlab-com/runbooks/-/tree/master/docs/logging)
 * [Dashboards](https://gitlab.com/gitlab-com/runbooks/-/tree/master/dashboards)
 * [Sentry](https://gitlab.com/gitlab-com/runbooks/-/tree/master/docs/sentry)
 
-* Examples of work:
-   * [Prometheus Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3APrometheus)
-   * [Thanos Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?sort=updated_desc&state=opened&label_name%5B%5D=Service%3A%3AThanos&first_page_size=100)
-   * [Elastic Search Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3AElasticsearch)
-
-### Useful links / videos for learning;
 
 How our monitoring stack works:
-* https://www.youtube.com/watch?v=CbX1nZL7biQ
-* https://www.youtube.com/watch?v=6sfr2IGJQXk                 
-* https://www.youtube.com/watch?v=YHV0qkKBz7o
-* https://vimeo.com/341141334
-* https://www.youtube.com/watch?v=2zL9DymXi1E  
-* https://www.youtube.com/watch?v=swnj6KTRg08
+* [SLOconf: GitLab’s journey to SLO Monitoring](https://www.youtube.com/watch?v=CbX1nZL7biQ)
+* [How We are Dealing with Metrics at Scale on GitLab.com](https://www.youtube.com/watch?v=6sfr2IGJQXk)                 
+* [Practical Capacity Planning using Prometheus](https://www.youtube.com/watch?v=YHV0qkKBz7o)
+* [Practical Anomaly Detection using Prometheus](https://vimeo.com/341141334)
 
+
+Examples of work:
+* [Prometheus Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3APrometheus)
+* [Thanos Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?sort=updated_desc&state=opened&label_name%5B%5D=Service%3A%3AThanos&first_page_size=100)
+* [Elastic Search Service Issues](https://gitlab.com/gitlab-com/gl-infra/reliability/-/issues/?label_name%5B%5D=Service%3A%3AElasticsearch)
