Iterate on interim compensation for Sales- update index.html.md.erb

--- a/total-rewards/compensation/index.html.md.erb
+++ b/total-rewards/compensation/index.html.md.erb
@@ -129,6 +129,7 @@ Effective Q2 of FY 2021, we have established a one time bonus payment process fo
 - For an interim role to be considered, the need for coverage would need to be longer than a 30 day time period.
 - The interim role has to be at a higher level than the current role of the team member.
     - If a team member assumes 100% of the workload of a lateral role for 60 days or more **in addition to their permanent full time role,** an interim bonus may be considered by the [People Business Partner](/handbook/people-group/#people-business-partner-alignment-to-division) and leader of the group.
+    - Effective 2023-02-01, interim bonuses in Go-to-Market roles (CRO Organization, Sales Development) will be available to people managers temporarily occupying a lateral or higher management position **in addition to their permanent full time role.**
 - In case the interim role is within another job family, team members will also be eligible for the interim compensation on a lateral level.
 
 _Since Acting roles do not typically end in promotion, the decision on whether the acting role meets the eligible criteria rests with the Hiring Manager and the Department head._
@@ -143,10 +144,17 @@ For team members on a base salary compensation plan, your bonus will be an addit
 
 - `(Annual Base Salary in Local Currency/365) x .10 (10%) x # of Calendar Days in the Interim Role`
 
-For team members on an OTE (On Target Earnings) compensation plan, if you assume the quota of the role that you are covering for, you will be paid 10% of your OTE for the interim role period. The calculation is as follows:
+For team members on an OTE (On Target Earnings) compensation plan in Go-to-Market roles, interim compensation will be based on results achieved by the interim team in the interim period:
 
-- `(Annual On Target Earnings in Local Currency/365) x .10 (10%) x # of Calendar Days in the Interim Role`
-- Commissions payments will continue for the duration of the interim role. Once the interim role is complete, your quota will revert to the quota of your previous role and a new compensation plan will be issued memorializing that quota and commission rate.
+- Interim leaders will dotted-line manage the new team, meaning they will not assume direct management of the team in Workday, but will instead act as a temporary leader. As such, quotas will not change during the interim period.
+- When interim managing a lateral team:
+    - The interim bonus will be calculated based on Net ARR closed during the period x the interim manager's BCR (base commission rate)
+- When interim covering for a higher leadership position:
+    - The interim bonus will be calculated based on Net ARR closed during the period x a representative BCR (base commission rate) for the higher leadership position
+- Standard commissions payments will continue for the duration of the interim role
+- All in-plan (within OTI) components are eligible to be included in an interim bonus calculation for a GTM role, e.g. Net ARR, New Logo, Professional Services Bookings, etc.
+- All people managers in GTM roles are candidates for interim management assignments, outside of members of the CRO or CMO leadership teams, i.e. direct reports of the CRO or CMO
+- Total bonus payments for GTM team members in an interim management role shall not exceed $50,000 USD for a single interim leadership assignment
 
 **The interim bonus should be calculated based on the team member's salary during the interim period, not the salary after the interim period.** If your compensation changes during the interim period (for example, relocation, country conversion, etc.), we will calculate the interim bonus based on the pay rate of each calendar day.
 
@@ -196,6 +204,8 @@ When the interim/acting period ends, the following process should be followed to
 
 - Senior Engineer has a base salary of $125,000. She has taken on the interim role of Engineering Mgr for 3 months (Jan-March) which is a total of 90 days. The bonus for this interim role would be `($125,000/365) x .10 x 90 = $3,082.19`
 - Finance Business Partner has a base salary of $100,000. He has taken on an interim role covering multiple teams while his coworker is on leave for 4.5 weeks which is a total of 31 days. The bonus for this interim role would be `($100,000/365) x .10 x 31 = $849.32` so we would round up for this bonus and process as a discretionary award.
+- Area Sales Manager interim manages a lateral team after a peer ASM has been promoted. The ASM has a base commission rate of 1% for Net ARR and $3,000.00 per New Logo.  During their interim coverage the Area closes $1,000,000.00 of nARR and 2 First Order new logos.  The bonus calculation would be ($1,000,000.00 x .01) + (2 x $3,000.00) = $16,000.00.
+- Area Sales Manager interim manages an entire Region after an AVP leaves GitLab. AVP base commission rates are 0.3% for Net ARR and $800 per New Logo. During the interim coverage period, the team closes $5M of Net ARR and 4 New Logos. The bonus calculation would be ($5,000,000.00 x 0.003) + (4 x $800.00) = $18,200.00.
 
 ## Exchange Rates
 
