Rename link to Plan Editor page

--- a/development/dev/plan/index.html.md.erb
+++ b/development/dev/plan/index.html.md.erb
@@ -17,7 +17,7 @@ Plan teams:
 - [Plan:Project Management Team](/handbook/engineering/development/dev/plan-project-management/)
 - [Plan:Product Planning Team](/handbook/engineering/development/dev/plan/product-planning/)
 - [Plan:Optimize Team](/handbook/engineering/development/dev/plan/optimize/)
-- [Plan:Editor Team](/handbook/engineering/development/dev/plan/editor/)
+- [Plan:Knowledge Team](/handbook/engineering/development/dev/plan/knowledge/)
 
 The responsibilities of this collective team are described by the [Plan stage](/handbook/product/categories/#plan-stage). Among other things, this means
 working on GitLab's functionality around issues, issue boards, milestones, to-do list, issue lists and filtering, roadmaps, time tracking, requirements management, and notifications.
